--- a/src/index.css
+++ b/src/index.css
@@ -100,12 +100,13 @@ col {
   border: 1px solid #dc8787;
   background-color: #ffffff;
   padding: 10px;
-  font-weight: 700;
+  font-weight: 400;
   margin: 10px;
 }
 
 #goBackBtn {
   display: none;
+  border: solid;
 }
 
 .go-back-btn-container {
